Hide title bar on OSX

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,6 +2,8 @@ include theme.conf
 
 background_opacity 0.95
 
+macos_hide_titlebar yes
+
 enable_audio_bell no
 window_alert_on_bell no
 bell_on_tab no
@@ -11,6 +13,7 @@ strip_trailing_spaces always
 
 tab_bar_style powerline
 
-font_size 9.0
+font_size 11.0
 
 allow_remote_control yes
+
