--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,7 +2,7 @@ include theme.conf
 
 background_opacity 0.95
 
-macos_hide_titlebar yes
+hide_window_decorations yes
 
 enable_audio_bell no
 window_alert_on_bell no
