Replace OpenVPN with Wireguard

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -93,7 +93,7 @@ inherit = bar/base
 
 bottom = true
 modules-center = player-mpris-tail
-modules-right = vpn wlan temperature memory cpu filesystem
+modules-right = vpn vpn-wireguard-wg wlan temperature memory cpu filesystem
 
 [module/vpn]
 type = custom/script
@@ -101,6 +101,12 @@ exec = echo vpn
 exec-if = pgrep -x openvpn
 interval = 5
 format-prefix = "嬨 "
+
+[module/vpn-wireguard-wg]
+type = custom/script
+exec = ~/Code/polybar-scripts/polybar-scripts/vpn-wireguard-wg/vpn-wireguard-wg.sh
+interval = 5
+click-left = ~/Code/polybar-scripts/polybar-scripts/vpn-wireguard-wg/vpn-wireguard-wg.sh --toggle &
 
 [module/player-mpris-tail]
 type = custom/script
