Change to blue theme, different wallpaper and Kitty

--- a/.config/sway/config.d/00-user.conf
+++ b/.config/sway/config.d/00-user.conf
@@ -5,3 +5,8 @@
 # * change the theme: set $theme /usr/share/sway/themes/matcha-blue
 # * change waybar position: set $waybar_position bottom
 #
+
+set $term kitty
+
+set $theme /usr/share/sway/themes/matcha-blue
+set $background /home/alex/Pictures/bl-winter2-bg.jpg
