--- a/.config/sway/config.d/10-keyboard.conf
+++ b/.config/sway/config.d/10-keyboard.conf
@@ -1,6 +1,6 @@
 input * {
   xkb_layout "us,ru"
-  xkb_options "grp:alt_shift_toggle,ctrl:swapcaps"
+  xkb_options "grp:alt_shift_toggle,ctrl:swapcaps,lv3:ralt_switch,misc:typo"
 }
 
 input "1:1:AT_Translated_Set_2_keyboard" xkb_model "pc105"
