--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -14,6 +14,10 @@ strip_trailing_spaces always
 tab_bar_style powerline
 
 font_size 10.0
+font_family      JetBrains Mono
+bold_font        JetBrains Mono Medium
+italic_font      JetBrains Mono Medium Italic
+bold_italic_font JetBrains Mono Bold Italic
 
 allow_remote_control yes
 
