--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -8,6 +8,8 @@ enable_audio_bell no
 window_alert_on_bell no
 bell_on_tab no
 
+map kitty_mod+enter new_window_with_cwd
+
 copy_on_select yes
 strip_trailing_spaces always
 
