--- a/.config/waybar/config.template
+++ b/.config/waybar/config.template
@@ -1,6 +1,21 @@
+// =============================================================================
+//
+// Waybar configuration
+//
+// Configuration reference: https://github.com/Alexays/Waybar/wiki/Configuration
+//
+// =============================================================================
+
 {
+  // -------------------------------------------------------------------------
+  // Global configuration
+  // -------------------------------------------------------------------------
+
   "layer": "top",
+
+  // If height property would be not present, it'd be calculated dynamically
   "height": 30,
+
   "modules-left": [
     "custom/menu",
     "sway/workspaces",
@@ -24,58 +39,69 @@
     "tray",
     "clock"
   ],
+
+
+  // -------------------------------------------------------------------------
+  // Modules
+  // -------------------------------------------------------------------------
+
   "battery": {
     "interval": 30,
     "states": {
       "warning": 30,
       "critical": 15
     },
-    "format-charging": "󰂄{capacity}%",
+    "format-charging": "󰂄{capacity}%", // Icon: bolt
     "format": "{icon}{capacity}%",
     "format-icons": [
       "󰂃",
-      "󰁺",
-      "󰁻",
-      "󰁽",
-      "󰂀",
-      "󰁹"
+      "󰁺", // Icon: battery-empty
+      "󰁻", // Icon: battery-quarter
+      "󰁽", // Icon: battery-half
+      "󰂀", // Icon: battery-three-quarters
+      "󰁹"  // Icon: battery-full
     ],
     "tooltip": false,
     "bat": "BAT0"
   },
+
   "clock": {
     "interval": 60,
-    "format": "󰸗{:%e %b %Y %H:%M}",
+    "format": "󰸗{:%e %b %Y %H:%M}", // Icon: calendar-alt
     "tooltip": true,
     "tooltip-format": "<big>{:%B %Y}</big>\n<tt>{calendar}</tt>",
     "on-click": "swaymsg exec \\$term_float khal"
   },
+
   "cpu": {
     "interval": 5,
-    "format": "󰘚{usage}%",
+    "format": "󰘚{usage}%", // Icon: microchip
     "states": {
-      "warning": 70,
-      "critical": 90
+    "warning": 70,
+    "critical": 90
     },
     "on-click": "swaymsg exec \\$term_float htop"
   },
+
   "memory": {
     "interval": 5,
-    "format": "󰍛{}%",
+    "format": "󰍛{}%", // Icon: memory
     "states": {
-      "warning": 70,
-      "critical": 90
+    "warning": 70,
+    "critical": 90
     },
     "on-click": "swaymsg exec \\$term_float htop"
   },
+
   "network": {
     "interval": 5,
-    "format-wifi": "󰖩 {essid} ({signalStrength}%)",
-    "format-ethernet": "󰈀 {ifname}",
+    "format-wifi": "󰖩 {essid} ({signalStrength}%)", // Icon: wifi
+    "format-ethernet": "󰈀 {ifname}", // Icon: ethernet
     "format-disconnected": "󱘖",
     "tooltip-format": "{ifname}: {ipaddr}",
     "on-click": "swaymsg exec \\$term_float nmtui"
   },
+
   "custom/vpn":{
     "format": "{icon}",
     "tooltip-format": "{icon}",
@@ -84,29 +110,30 @@
     "interval": 5,
     "format-icons": ["",""]
   },
+
   "sway/mode": {
     "format": "<span style=\"italic\">{}</span>",
     "tooltip": false
   },
+
   "sway/window": {
     "format": "{}",
     "max-length": 120
   },
+
   "sway/workspaces": {
     "all-outputs": false,
     "disable-scroll": true,
     "format": "{name}"
   },
+
   "backlight": {
     "format": "{icon} {percent}%",
-    "format-icons": [
-      "󰃞",
-      "󰃟",
-      "󰃠"
-    ],
+    "format-icons": ["󰃞", "󰃟", "󰃠"],
     "on-scroll-down": "light -A 1",
     "on-scroll-up": "light -U 1"
   },
+
   "idle_inhibitor": {
     "format": "{icon}",
     "format-icons": {
@@ -114,7 +141,9 @@
       "deactivated": "󰒲"
     }
   },
+
   "pulseaudio": {
+    //"scroll-step": 1,
     "format": "{icon}{volume}%  󰍬{format_source}",
     "format-bluetooth": "{icon}󰂰 {volume}%  󰍬{format_source}",
     "format-muted": "󰖁",
@@ -125,42 +154,43 @@
       "phone": "󰏲",
       "portable": "󰄝",
       "car": "󰄋",
-      "default": [
-        "󰕿",
-        "󰖀",
-        "󰕾"
-      ]
+      "default": ["󰕿", "󰖀", "󰕾"]
     },
     "on-click": "swaymsg exec \\$pulseaudio"
   },
+
   "temperature": {
     "critical-threshold": 90,
     "interval": 5,
     "format": "{icon}{temperatureC}°C",
     "format-icons": [
       "󱃃",
-      "󰔏",
-      "󰔐"
+      "󰔏", // Icon: temperature ok
+      "󰔐"  // Icon: temperature not ok
     ],
     "tooltip": true,
     "on-click": "swaymsg exec \"\\$term_float 'watch sensors'\""
   },
+
   "tray": {
     "icon-size": 21,
     "spacing": 5
   },
+
   "custom/pacman": {
     "format": "󰀼 {}",
     "interval": 3600,
     "exec-if": "[ $(checkupdates | wc -l) -gt 0 ]",
     "exec": "pamac checkupdates | wc -l",
-    "on-click": "pamac-manager --updates"
+    "on-click": "pamac-manager --updates",
   },
+
   "custom/menu": {
     "format": "󱘊",
     "on-click": "swaymsg exec \\$menu",
     "tooltip": false
   },
+
   "bluetooth": {
     "format": "{icon}",
     "interval": 30,
@@ -170,6 +200,5 @@
     },
     "on-click": "blueberry",
     "tooltip-format": "{status}"
-  },
-  "position": "top"
+  }
 }
