Tooltip format for bluetooth doesn't need status

--- a/.config/waybar/config.template
+++ b/.config/waybar/config.template
@@ -199,6 +199,6 @@
       "disabled": "󰂲"
     },
     "on-click": "blueberry",
-    "tooltip-format": "{status}"
+    "tooltip-format": "{}"
   }
 }
