Add printscreen shortcut

--- a/.config/sway/config.d/00-user.conf
+++ b/.config/sway/config.d/00-user.conf
@@ -10,3 +10,6 @@ set $term kitty
 
 set $theme /usr/share/sway/themes/matcha-blue
 set $background /home/alex/Pictures/bl-winter2-bg.jpg
+
+# capture the specified screen area to clipboard
+bindsym Shift+Print exec grim -g "$(slurp)" - | wl-copy
