--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -12,6 +12,7 @@ map kitty_mod+enter new_window_with_cwd
 
 copy_on_select yes
 strip_trailing_spaces always
+clipboard_control write-clipboard write-primary no-append
 
 tab_bar_style powerline
 
