--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,7 +2,7 @@ include theme.conf
 
 background_opacity 0.95
 
-hide_window_decorations yes
+hide_window_decorations titlebar-only
 
 enable_audio_bell no
 window_alert_on_bell no
