Display tmux statusbar on top

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -30,5 +30,7 @@ setw -g pane-base-index 1     # make pane numbering consistent with windows
 setw -g automatic-rename on   # rename window to reflect current program
 set -g renumber-windows on    # renumber windows when a window is closed
 
+set-option -g status-position top # Display status bar at the top
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
