Make sure wezterm and neovide fonts match
Had to define different weight styles for neovide, otherwise it looks
too bold; similarly for wezterm, needed to define different font weight,
otherwise everything is too thin.

--- a/dotfiles/neovide/config.toml
+++ b/dotfiles/neovide/config.toml
@@ -1,2 +1,14 @@
 frame = "transparent"
 
+[font]
+size = 12
+family = "JetBrainsMono Nerd Font Mono"
+hinting = "full"
+
+[[font.normal]]
+family = "JetBrainsMono Nerd Font Mono"
+style = "W300"
+
+[[font.bold]]
+family = "JetBrainsMono Nerd Font Mono"
+style = "W400"
