--- a/dotfiles/aerospace/aerospace.toml
+++ b/dotfiles/aerospace/aerospace.toml
@@ -109,9 +109,10 @@ alt-shift-j = 'move down'
 alt-shift-k = 'move up'
 alt-shift-l = 'move right'
 
+
 # See: https://nikitabobko.github.io/AeroSpace/commands#resize
-# alt-minus = 'resize smart -50'
-# alt-equal = 'resize smart +50'
+alt-shift-minus = 'resize smart -50'
+alt-shift-equal = 'resize smart +50'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#workspace
 ctrl-1 = 'workspace 1'
